Greatly improved mobile layout. Moved gallery link to header except on mobile.

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -18,7 +18,7 @@ header {
   padding: 10px; }
   /* line 17, gallery.scss */
   .drawing img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     border-radius: 5px;
     box-shadow: 0 2px 0 0 #222; }
