--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -15,7 +15,7 @@ header {
 	width: 25%;
 	padding: 10px;
 	img {
-		max-width: 100%;
+		width: 100%;
 		height: auto;
 		border-radius: 5px;
 		box-shadow: 0 2px 0 0 #222;
