--- a/sass/painter.scss
+++ b/sass/painter.scss
@@ -106,7 +106,7 @@ header {
 nav {
 	margin: 0px 20px;
 	z-index: 0;
-	width: 110px;
+	width: 120px;
 	box-shadow: 0px 2px 2px 0px #111;
 	position: absolute;
 	text-align: center;
@@ -120,9 +120,15 @@ nav {
 		padding: 10px;
 		position: relative;
 		font-family: 'Open Sans', sans-serif;
+		border-top: 1px solid #666;
 		&:hover {
 			background: #EBE2B5;
 		}
+	}
+	div {
+		background: white;
+		border-top: 1px solid;
+		padding: 5px;
 	}
 	@media #{$mq-phone-landscape} {
 		display: none;
