--- a/css/painter.css
+++ b/css/painter.css
@@ -341,6 +341,10 @@ h1 {
   background: #fad0de; }
 
 /* line 14, painter.scss */
+.purple {
+  background: #946d9b; }
+
+/* line 14, painter.scss */
 .brown {
   background: #875e37; }
 
