--- a/sass/painter.scss
+++ b/sass/painter.scss
@@ -61,8 +61,8 @@ $mq-phone-landscape: "only screen and (max-width : 481px)";
 $mq-tablet: "only screen and (max-width : 900px)";
 $mq-1110: "only screen and (max-width : 1110px)";
 /***** COLORS ********************/
-$rainbow-color-names: red, orange, yellow, light-green, green, light-blue, blue, pink, brown, gray;
-$rainbow-colors: #F42A35, #FFA200, #FFD500, #A8BF12, #2EB52F, #00AAB5, #325BC5, #FAD0DE, #875E37, #8E969B;
+$rainbow-color-names: red, orange, yellow, light-green, green, light-blue, blue, pink, purple, brown, gray;
+$rainbow-colors: #F42A35, #FFA200, #FFD500, #A8BF12, #2EB52F, #00AAB5, #325BC5, #FAD0DE,#946D9B, #875E37, #8E969B;
 
 
 * {
