--- a/css/painter.css
+++ b/css/painter.css
@@ -80,8 +80,48 @@ nav {
     nav {
       position: relative; } }
 
+/************ DONATION BAR *************************/
+/* line 142, painter.scss */
+#donationDropdown {
+  display: none;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto;
+  width: 70%;
+  background-color: #4E8FD5;
+  box-shadow: 0px 2px 2px 0px #111; }
+  /* line 150, painter.scss */
+  #donationDropdown p {
+    color: #fff;
+    text-shadow: 0 1px #666;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    margin: 5px 0; }
+    /* line 156, painter.scss */
+    #donationDropdown p:nth-child(2) {
+      font-size: .8em;
+      width: 75%;
+      margin: 5px auto; }
+  @media only screen and (max-width: 1110px) {
+    /* line 142, painter.scss */
+    #donationDropdown {
+      width: 50%; } }
+  @media only screen and (max-width: 381px) {
+    /* line 142, painter.scss */
+    #donationDropdown {
+      position: absolute;
+      top: -9999px; } }
+  /* line 170, painter.scss */
+  #donationDropdown #donationButtons form {
+    display: inline; }
+  /* line 173, painter.scss */
+  #donationDropdown #donationButtons a {
+    font-family: 'Open Sans', sans-serif;
+    color: #ddd;
+    margin: 5px; }
+
 /************ HERO TEXT ****************************/
-/* line 143, painter.scss */
+/* line 183, painter.scss */
 h1 {
   font-family: 'Open Sans', sans-serif;
   color: white;
@@ -90,7 +130,7 @@ h1 {
   margin: 10px 0 0; }
 
 /************ LEFT COLUMN **************************/
-/* line 153, painter.scss */
+/* line 193, painter.scss */
 #imageContainer {
   max-width: 100%;
   width: 100%;
@@ -102,14 +142,14 @@ h1 {
   box-shadow: 0 2px 0 0 #222;
   text-align: center;
   font: 0/0 a; }
-  /* line 164, painter.scss */
+  /* line 204, painter.scss */
   #imageContainer:before {
     content: ' ';
     display: inline-block;
     vertical-align: middle;
     /* vertical alignment of the inline element */
     height: 100%; }
-  /* line 170, painter.scss */
+  /* line 210, painter.scss */
   #imageContainer img {
     display: inline-block;
     vertical-align: middle;
@@ -118,11 +158,11 @@ h1 {
     max-height: 100%;
     border-radius: 5px; }
   @media only screen and (max-width: 381px) {
-    /* line 153, painter.scss */
+    /* line 193, painter.scss */
     #imageContainer {
       display: none; } }
 
-/* line 182, painter.scss */
+/* line 222, painter.scss */
 #pokemonName {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
@@ -132,27 +172,27 @@ h1 {
   text-shadow: 0 2px #333; }
 
 /************ CENTER COLUMN **************************/
-/* line 191, painter.scss */
+/* line 231, painter.scss */
 .center-column {
   padding-top: 30px;
   text-align: center; }
   @media only screen and (max-width: 381px) {
-    /* line 191, painter.scss */
+    /* line 231, painter.scss */
     .center-column {
       padding-top: 0; } }
 
-/* line 198, painter.scss */
+/* line 238, painter.scss */
 #timer {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-size: 48px;
   display: none; }
   @media only screen and (max-width: 381px) {
-    /* line 198, painter.scss */
+    /* line 238, painter.scss */
     #timer {
       display: hidden; } }
 
-/* line 207, painter.scss */
+/* line 247, painter.scss */
 #newRound {
   position: relative;
   background: #78bc3f;
@@ -180,13 +220,13 @@ h1 {
   #newRound:disabled {
     opacity: 0.7; }
   @media only screen and (max-width: 900px) {
-    /* line 207, painter.scss */
+    /* line 247, painter.scss */
     #newRound {
       font-size: 24px;
       line-height: 24px;
       padding: 8px 10px; } }
 
-/* line 220, painter.scss */
+/* line 260, painter.scss */
 #share, #save {
   position: relative;
   background: #478e95;
@@ -215,20 +255,20 @@ h1 {
   #share:disabled, #save:disabled {
     opacity: 0.7; }
 
-/* line 229, painter.scss */
+/* line 269, painter.scss */
 #save {
   text-decoration: none;
   margin: 0 auto; }
-  /* line 232, painter.scss */
+  /* line 272, painter.scss */
   #save:active {
     top: 2px;
     box-shadow: none; }
 
 /************ RIGHT COLUMN **************************/
-/* line 239, painter.scss */
+/* line 279, painter.scss */
 #canvas-container {
   position: relative; }
-  /* line 241, painter.scss */
+  /* line 281, painter.scss */
   #canvas-container #canvas {
     max-width: 100%;
     width: 100%;
@@ -240,7 +280,7 @@ h1 {
     box-shadow: 0 2px 0 0 #222;
     pointer-events: none;
     cursor: url(../img/cursor.png), crosshair; }
-  /* line 254, painter.scss */
+  /* line 294, painter.scss */
   #canvas-container #pip {
     display: none;
     position: absolute;
@@ -250,15 +290,15 @@ h1 {
     left: 5px;
     border-radius: 5px; }
     @media only screen and (max-width: 381px) {
-      /* line 254, painter.scss */
+      /* line 294, painter.scss */
       #canvas-container #pip {
         display: block; } }
-    /* line 265, painter.scss */
+    /* line 305, painter.scss */
     #canvas-container #pip img {
       max-width: 100%;
       max-height: 100%;
       border-radius: 5px; }
-  /* line 271, painter.scss */
+  /* line 311, painter.scss */
   #canvas-container #pip-timer {
     display: none;
     position: absolute;
@@ -266,22 +306,22 @@ h1 {
     top: 5px;
     font-size: 36px; }
     @media only screen and (max-width: 381px) {
-      /* line 271, painter.scss */
+      /* line 311, painter.scss */
       #canvas-container #pip-timer {
         display: block; } }
 
-/* line 283, painter.scss */
+/* line 323, painter.scss */
 .controls {
   margin: 0 auto;
   border-radius: 5px; }
-  /* line 286, painter.scss */
+  /* line 326, painter.scss */
   .controls ul {
     list-style: none;
     float: left;
     padding: 0;
     width: 100%;
     text-align: center; }
-    /* line 292, painter.scss */
+    /* line 332, painter.scss */
     .controls ul li {
       display: inline-block;
       margin: 0 5px 5px;
@@ -298,11 +338,11 @@ h1 {
         top: 2px;
         box-shadow: none; }
       @media only screen and (max-width: 381px) {
-        /* line 292, painter.scss */
+        /* line 332, painter.scss */
         .controls ul li {
           width: 46px;
           height: 46px; } }
-      /* line 298, painter.scss */
+      /* line 338, painter.scss */
       .controls ul li a {
         display: block;
         height: 100%; }
@@ -352,11 +392,11 @@ h1 {
 .gray {
   background: #8e969b; }
 
-/* line 310, painter.scss */
+/* line 350, painter.scss */
 .black {
   background: #000; }
 
-/* line 314, painter.scss */
+/* line 354, painter.scss */
 #colorSelect {
   background: #fff;
   border-radius: 5px;
@@ -366,7 +406,7 @@ h1 {
   max-width: 100%;
   width: 300px;
   position: relative; }
-  /* line 323, painter.scss */
+  /* line 363, painter.scss */
   #colorSelect:after {
     bottom: 100%;
     left: 50%;
@@ -381,7 +421,7 @@ h1 {
     border-width: 12px;
     margin-left: -10px; }
 
-/* line 338, painter.scss */
+/* line 378, painter.scss */
 #addNewColor {
   position: relative;
   background: #946d9b;
@@ -409,14 +449,14 @@ h1 {
   #addNewColor:disabled {
     opacity: 0.7; }
 
-/* line 347, painter.scss */
+/* line 387, painter.scss */
 .sliders {
   padding-top: 4px; }
-  /* line 349, painter.scss */
+  /* line 389, painter.scss */
   .sliders p {
     margin: 8px 0;
     vertical-align: middle; }
-  /* line 353, painter.scss */
+  /* line 393, painter.scss */
   .sliders label {
     text-align: right;
     font-family: "Open Sans",sans-serif;
@@ -425,36 +465,36 @@ h1 {
     margin: 0 10px 0 10px;
     width: 20%;
     font-size: 16px; }
-  /* line 361, painter.scss */
+  /* line 401, painter.scss */
   .sliders input {
     position: relative;
     width: 60%;
     top: 4px; }
 
 /********** FOOTER **********************/
-/* line 372, painter.scss */
+/* line 412, painter.scss */
 footer {
   margin-top: 40px;
   background: #444;
   color: #eee;
   padding: 20px 0; }
-  /* line 377, painter.scss */
+  /* line 417, painter.scss */
   footer .footerLink {
     float: left;
     width: 100%; }
-  /* line 381, painter.scss */
+  /* line 421, painter.scss */
   footer #byline {
     float: right;
     width: 100%;
     text-align: right; }
-  /* line 386, painter.scss */
+  /* line 426, painter.scss */
   footer .fb-like-box {
     float: right; }
-  /* line 389, painter.scss */
+  /* line 429, painter.scss */
   footer a {
     text-decoration: none;
     font-weight: bold;
     color: #BD9E70; }
-    /* line 393, painter.scss */
+    /* line 433, painter.scss */
     footer a:hover {
       color: #E4C08A; }
