--- a/sass/painter.scss
+++ b/sass/painter.scss
@@ -134,7 +134,47 @@ nav {
 		display: none;
 	}
 	@media #{$mq-1110} {
-		position:relative;
+		position: relative;
+	}
+}
+/************ DONATION BAR *************************/
+
+#donationDropdown {
+	display:none;
+	padding: 20px;
+	text-align: center;
+	margin: 0 auto;
+	width: 70%;
+	background-color:#4E8FD5;
+	box-shadow: 0px 2px 2px 0px #111;
+	p {
+		color: #fff;
+		text-shadow: 0 1px #666;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 20px;
+		margin: 5px 0;
+		&:nth-child(2) {
+			font-size: .8em;
+			width:75%;
+			margin: 5px auto;
+		}
+	}
+	@media #{$mq-1110} {
+		width: 50%;
+	}
+	@media #{$mq-phone} {
+		position: absolute;
+		top: -9999px;
+	}
+	#donationButtons {
+		form {
+			display: inline;
+		}
+		a {
+			font-family: 'Open Sans', sans-serif;
+			color: #ddd;
+			margin: 5px;
+		}
 	}
 }
 
